fix text alignment in container

--- a/app/assets/stylesheets/glucose_levels.css.scss
+++ b/app/assets/stylesheets/glucose_levels.css.scss
@@ -3,5 +3,4 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .container-body {
 padding: 40px 15px;
-text-align: center;
 }
